# Robot_Kinematics

./: CMakeLists.txt  README.md
src/: pythagora_angle.c  pythagoras.c  rotate_point.c
todo/: view.c
